--- a/package.json
+++ b/package.json
@@ -3,11 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.16.1",
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "pg": "^6.1.2",
     "react": "15.4.2",
-    "react-dom": "15.4.2"
+    "react-dom": "15.4.2",
+    "sequelize": "^3.30.2"
   },
   "devDependencies": {
-    "react-scripts": "0.9.2"
+    "react-scripts": "0.9.2",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.9.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
+    "mocha": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
