--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "pg": "^6.1.2",
     "react": "15.4.2",
     "react-dom": "15.4.2",
-    "sequelize": "^3.30.2"
+    "sequelize": "^3.30.2",
+    "react-router": "^3.0.2"
   },
   "devDependencies": {
     "react-scripts": "0.9.2",
